snapshot, devel versions

--- a/results/mem-allocate.html
+++ b/results/mem-allocate.html
@@ -25,6 +25,61 @@
       1.69
    ],
    [
+      "5.13.0",
+      0.97,
+      0.97
+   ],
+   [
+      "5.13.1",
+      0.97,
+      0.97
+   ],
+   [
+      "5.13.2",
+      0.97,
+      1.01
+   ],
+   [
+      "5.13.3",
+      0.97,
+      0.97
+   ],
+   [
+      "5.13.4",
+      1.01,
+      1.01
+   ],
+   [
+      "5.13.5",
+      1.01,
+      0.97
+   ],
+   [
+      "5.13.6",
+      1.01,
+      0.98
+   ],
+   [
+      "5.13.7",
+      1.03,
+      1.01
+   ],
+   [
+      "5.13.8",
+      1.01,
+      0.98
+   ],
+   [
+      "5.13.9",
+      1.01,
+      1.02
+   ],
+   [
+      "5.13.10",
+      1.02,
+      0.99
+   ],
+   [
       "5.14.0",
       0.94,
       0.88
@@ -33,6 +88,51 @@
       "5.14.4",
       0.93,
       0.88
+   ],
+   [
+      "5.15.1",
+      0.97,
+      0.97
+   ],
+   [
+      "5.15.2",
+      0.99,
+      1.02
+   ],
+   [
+      "5.15.3",
+      0.97,
+      0.97
+   ],
+   [
+      "5.15.4",
+      0.97,
+      1.01
+   ],
+   [
+      "5.15.5",
+      0.97,
+      1.01
+   ],
+   [
+      "5.15.6",
+      0.97,
+      1.02
+   ],
+   [
+      "5.15.7",
+      0.97,
+      1.01
+   ],
+   [
+      "5.15.8",
+      0.97,
+      0.99
+   ],
+   [
+      "5.15.9",
+      0.97,
+      0.99
    ],
    [
       "5.16.0",
@@ -45,6 +145,56 @@
       0.88
    ],
    [
+      "5.17.0",
+      0.97,
+      0.98
+   ],
+   [
+      "5.17.1",
+      1.02,
+      0.98
+   ],
+   [
+      "5.17.2",
+      1.02,
+      0.97
+   ],
+   [
+      "5.17.3",
+      1.02,
+      1
+   ],
+   [
+      "5.17.4",
+      1.01,
+      0.96
+   ],
+   [
+      "5.17.5",
+      1.01,
+      1.01
+   ],
+   [
+      "5.17.6",
+      1.01,
+      0.99
+   ],
+   [
+      "5.17.7",
+      1.04,
+      1.04
+   ],
+   [
+      "5.17.8",
+      1.04,
+      0.95
+   ],
+   [
+      "5.17.9",
+      1.05,
+      0.95
+   ],
+   [
       "5.18.0",
       0.98,
       0.89
@@ -53,6 +203,66 @@
       "5.18.4",
       0.98,
       0.95
+   ],
+   [
+      "5.19.0",
+      1.04,
+      0.95
+   ],
+   [
+      "5.19.1",
+      1.01,
+      0.96
+   ],
+   [
+      "5.19.2",
+      1.01,
+      1.01
+   ],
+   [
+      "5.19.3",
+      1.04,
+      0.96
+   ],
+   [
+      "5.19.4",
+      0.87,
+      0.87
+   ],
+   [
+      "5.19.5",
+      0.87,
+      0.92
+   ],
+   [
+      "5.19.6",
+      0.87,
+      0.87
+   ],
+   [
+      "5.19.7",
+      0.87,
+      0.92
+   ],
+   [
+      "5.19.8",
+      0.91,
+      0.91
+   ],
+   [
+      "5.19.9",
+      0.91,
+      0.87
+   ],
+   [
+      "5.19.10",
+      0.87,
+      0.89
+   ],
+   [
+      "5.19.11",
+      0.87,
+      0.87
    ],
    [
       "5.20.0",
@@ -65,14 +275,54 @@
       0.78
    ],
    [
+      "5.21.0",
+      0.87,
+      0.92
+   ],
+   [
+      "5.21.1",
+      0.91,
+      0.94
+   ],
+   [
+      "5.21.2",
+      0.87,
+      0.92
+   ],
+   [
+      "5.21.3",
+      0.91,
+      0.89
+   ],
+   [
+      "5.21.4",
+      0.87,
+      0.89
+   ],
+   [
+      "5.21.5",
+      0.88,
+      0.92
+   ],
+   [
       "5.22.0",
       0.87,
       0.87
+   ],
+   [
+      "5.23.0",
+      0.91,
+      0.87
+   ],
+   [
+      "5.23.1",
+      0.92,
+      0.92
    ]
 ]
 );
         var options = {
-            title: 'Perl::Formance - Mem - memory stress',
+            title: 'Perl::Formance - Mem.allocate - memory stress',
             hAxis: {title: 'perlconfig_version',  titleTextStyle: {color: '#333'}, slantedTextAngle: 45},
             vAxis: {minValue: 0, title:'seconds (smaller is better)'},
             pointSize: 4,
