--- a/results/fibonacci.html
+++ b/results/fibonacci.html
@@ -49,6 +49,149 @@
       null
    ],
    [
+      "5.13.0",
+      62.09,
+      60.77,
+      86.2,
+      84.45,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.1",
+      57.43,
+      53.99,
+      83.63,
+      73.84,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.2",
+      54.24,
+      52.4,
+      78.9,
+      73.36,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.3",
+      54.7,
+      54.43,
+      79.03,
+      78.87,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.4",
+      55.4,
+      51.23,
+      81.17,
+      75.07,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.5",
+      56.98,
+      53.88,
+      79.26,
+      74.27,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.6",
+      56.8,
+      53.28,
+      84.22,
+      77.42,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.7",
+      59.56,
+      51.61,
+      88.21,
+      75.99,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.8",
+      60.58,
+      52.46,
+      82.13,
+      83.37,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.9",
+      58.37,
+      57.22,
+      86.85,
+      85.64,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.13.10",
+      62.99,
+      56.74,
+      89.61,
+      81.48,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
       "5.14.0",
       57.45,
       54.81,
@@ -71,6 +214,123 @@
       76.77,
       85.14,
       79.04,
+      null,
+      null
+   ],
+   [
+      "5.15.1",
+      56.2,
+      51.63,
+      81.97,
+      73.47,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.2",
+      56.35,
+      52.64,
+      78.6,
+      77.56,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.3",
+      56.21,
+      53.24,
+      83.84,
+      76.01,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.4",
+      57.21,
+      53.13,
+      82.2,
+      77.29,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.5",
+      57.25,
+      52.71,
+      83.88,
+      79.92,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.6",
+      59.86,
+      55.31,
+      82.85,
+      82.22,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.7",
+      58.14,
+      64.03,
+      84.9,
+      88.18,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.8",
+      58.22,
+      56.75,
+      87.14,
+      81.23,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.15.9",
+      59.55,
+      54.88,
+      84.47,
+      81.23,
+      null,
+      null,
+      null,
+      null,
       null,
       null
    ],
@@ -101,6 +361,136 @@
       null
    ],
    [
+      "5.17.0",
+      61.49,
+      55.96,
+      82.27,
+      77.45,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.1",
+      58.83,
+      64.83,
+      83.36,
+      87.36,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.2",
+      61.91,
+      58.8,
+      84.71,
+      80.04,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.3",
+      66.11,
+      57.63,
+      89.97,
+      74.23,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.4",
+      60.02,
+      52.78,
+      82.02,
+      73.23,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.5",
+      70.67,
+      52.88,
+      87.88,
+      78.94,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.6",
+      65.87,
+      54.52,
+      88.32,
+      71.15,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.7",
+      61.58,
+      55.01,
+      84.69,
+      72.32,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.8",
+      61.07,
+      55.37,
+      82.37,
+      70.96,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.17.9",
+      56.85,
+      60.83,
+      75.71,
+      78.17,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
       "5.18.0",
       54.72,
       52.07,
@@ -123,6 +513,162 @@
       69.99,
       81.9,
       68.63,
+      null,
+      null
+   ],
+   [
+      "5.19.0",
+      56.62,
+      54.03,
+      78.36,
+      71.76,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.1",
+      55.09,
+      54.27,
+      73.04,
+      73.88,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.2",
+      60.2,
+      54.53,
+      78.35,
+      73.15,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.3",
+      67.71,
+      63.3,
+      85.8,
+      80.92,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.4",
+      67.74,
+      59.52,
+      88.85,
+      80.28,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.5",
+      70.96,
+      58.59,
+      88.76,
+      77.08,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.6",
+      69.2,
+      59.97,
+      87.32,
+      80.8,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.7",
+      66.83,
+      69.02,
+      83.48,
+      90.04,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.8",
+      64.25,
+      66.32,
+      81.27,
+      87.45,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.9",
+      66.24,
+      60.59,
+      84.82,
+      82.1,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.10",
+      64.46,
+      59.56,
+      82.99,
+      81.71,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.19.11",
+      66.72,
+      57.68,
+      84.95,
+      76.94,
+      null,
+      null,
+      null,
+      null,
       null,
       null
    ],
@@ -153,6 +699,84 @@
       107.85
    ],
    [
+      "5.21.0",
+      64.66,
+      56.64,
+      83.4,
+      80.7,
+      null,
+      null,
+      null,
+      null,
+      117.77,
+      105.06
+   ],
+   [
+      "5.21.1",
+      66,
+      59.5,
+      86.24,
+      77.12,
+      null,
+      null,
+      null,
+      null,
+      116.71,
+      106.24
+   ],
+   [
+      "5.21.2",
+      71.21,
+      61.47,
+      91.34,
+      88.4,
+      null,
+      null,
+      null,
+      null,
+      123.31,
+      115.2
+   ],
+   [
+      "5.21.3",
+      65.29,
+      61.35,
+      88.61,
+      82.99,
+      null,
+      null,
+      null,
+      null,
+      111.83,
+      109.76
+   ],
+   [
+      "5.21.4",
+      61.75,
+      60.64,
+      84.71,
+      79.52,
+      null,
+      null,
+      null,
+      null,
+      113.79,
+      105.49
+   ],
+   [
+      "5.21.5",
+      63.45,
+      62.51,
+      83.11,
+      82.26,
+      null,
+      null,
+      null,
+      null,
+      119.96,
+      109.43
+   ],
+   [
       "5.22.0",
       57.57,
       59.42,
@@ -164,6 +788,32 @@
       null,
       110.11,
       102.56
+   ],
+   [
+      "5.23.0",
+      60.76,
+      58.08,
+      82.74,
+      78.27,
+      null,
+      null,
+      null,
+      null,
+      108.66,
+      106.06
+   ],
+   [
+      "5.23.1",
+      59.15,
+      58.68,
+      78.48,
+      76.03,
+      null,
+      null,
+      null,
+      null,
+      110.86,
+      103.77
    ]
 ]
 );
