--- a/results/fibonacci.html
+++ b/results/fibonacci.html
@@ -23,10 +23,23 @@
       "FibOOSig/nothreads"
    ],
    [
-      "5.10.0",
-      60.72,
+      "5.8.9",
+      64.82,
+      60.87,
+      95.74,
+      88.51,
       null,
-      89.56,
+      null,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.10.0",
+      60.91,
+      null,
+      89.75,
       null,
       89.11,
       null,
@@ -37,10 +50,10 @@
    ],
    [
       "5.10.1",
-      63.13,
-      61.87,
-      88.38,
-      89.7,
+      63.1,
+      62.06,
+      88.55,
+      89.43,
       null,
       null,
       null,
