--- a/results/threadsshared.html
+++ b/results/threadsshared.html
@@ -11,328 +11,268 @@
         var data = google.visualization.arrayToDataTable([
    [
       "perlconfig_version",
-      "mem.copy/threads",
-      "mem.copy/nothreads"
-   ],
-   [
-      "5.8.9",
-      12.16,
-      11.64
-   ],
-   [
-      "5.10.0",
-      16.8,
-      null
+      "threadstorm.shared/threads"
    ],
    [
       "5.10.1",
-      16.85,
-      16.53
+      74.1
    ],
    [
       "5.12.0",
-      18.28,
-      17.21
+      92.87
    ],
    [
       "5.13.0",
-      17.96,
-      17.09
+      92.15
    ],
    [
       "5.13.1",
-      18.24,
-      17.48
+      87.71
    ],
    [
       "5.13.2",
-      18.2,
-      18.41
+      79.21
    ],
    [
       "5.13.3",
-      17.84,
-      17.39
+      83.51
    ],
    [
       "5.13.4",
-      17.83,
-      17.04
+      81.13
    ],
    [
       "5.13.5",
-      18.31,
-      17.69
+      69.33
    ],
    [
       "5.13.6",
-      18.6,
-      19.11
+      69.34
    ],
    [
       "5.13.7",
-      19.16,
-      18.97
+      74.12
    ],
    [
       "5.13.8",
-      18.66,
-      19.72
+      67.85
    ],
    [
       "5.13.9",
-      18.21,
-      17.31
+      67.75
    ],
    [
       "5.13.10",
-      18.54,
-      17.76
+      71
    ],
    [
       "5.14.0",
-      18.02,
-      17.32
+      72.2
    ],
    [
       "5.14.4",
-      18.66,
-      18.08
+      72.27
    ],
    [
       "5.15.1",
-      18.55,
-      18.46
+      67.78
    ],
    [
       "5.15.2",
-      20.56,
-      18.89
+      68.62
    ],
    [
       "5.15.3",
-      18.16,
-      17.94
+      69.37
    ],
    [
       "5.15.4",
-      20.02,
-      19.25
+      71.11
    ],
    [
       "5.15.5",
-      17.94,
-      19.21
+      69.56
    ],
    [
       "5.15.6",
-      18.66,
-      17.86
+      70.05
    ],
    [
       "5.15.7",
-      18.69,
-      18.22
+      70.15
    ],
    [
       "5.15.8",
-      18.35,
-      17.86
+      71.68
    ],
    [
       "5.15.9",
-      17.51,
-      17.6
+      71.41
    ],
    [
       "5.16.0",
-      17.23,
-      16.52
+      75.24
    ],
    [
       "5.16.3",
-      17.91,
-      18.02
+      75.15
    ],
    [
       "5.17.0",
-      17.75,
-      17.19
+      71.96
    ],
    [
       "5.17.1",
-      18.04,
-      17.73
+      70.69
    ],
    [
       "5.17.2",
-      17.41,
-      17.77
+      71.08
    ],
    [
       "5.17.3",
-      17.88,
-      17.37
+      71.65
    ],
    [
       "5.17.4",
-      17.62,
-      16.86
+      71.9
    ],
    [
       "5.17.5",
-      18.35,
-      17.71
+      71
    ],
    [
       "5.17.6",
-      18.76,
-      17.55
+      70.73
    ],
    [
       "5.17.7",
-      19.24,
-      17.72
+      71.23
    ],
    [
       "5.17.8",
-      19.36,
-      17.54
+      71.33
    ],
    [
       "5.17.9",
-      18.59,
-      17.55
+      71.74
    ],
    [
       "5.18.0",
-      17.97,
-      16.98
+      75.48
    ],
    [
       "5.18.4",
-      17.77,
-      17.01
+      75.74
    ],
    [
       "5.19.0",
-      18.34,
-      17.98
+      72.69
    ],
    [
       "5.19.1",
-      18.76,
-      17.93
+      73.11
    ],
    [
       "5.19.2",
-      18.47,
-      18.14
+      71.89
    ],
    [
       "5.19.3",
-      19.36,
-      17.92
+      72.8
    ],
    [
       "5.19.4",
-      19.37,
-      17.47
+      72.37
    ],
    [
       "5.19.5",
-      19.08,
-      18.42
+      72.35
    ],
    [
       "5.19.6",
-      31.94,
-      17.6
+      72.02
    ],
    [
       "5.19.7",
-      23.88,
-      17.99
+      72.62
    ],
    [
       "5.19.8",
-      19.13,
-      17.76
+      73.12
    ],
    [
       "5.19.9",
-      18.81,
-      17.35
+      73.68
    ],
    [
       "5.19.10",
-      18.93,
-      17.59
+      72.91
    ],
    [
       "5.19.11",
-      18.98,
-      18.38
+      73.06
    ],
    [
       "5.20.0",
-      18.46,
-      16.85
+      76.47
    ],
    [
       "5.20.2",
-      18.45,
-      16.79
+      76.44
    ],
    [
       "5.21.0",
-      19.33,
-      17.48
+      73.22
    ],
    [
       "5.21.1",
-      18.86,
-      17.7
+      78.67
    ],
    [
       "5.21.2",
-      19.08,
-      17.65
+      79.43
    ],
    [
       "5.21.3",
-      18.58,
-      17.32
+      78.43
    ],
    [
       "5.21.4",
-      19.8,
-      17.49
+      78.83
    ],
    [
       "5.21.5",
-      18.45,
-      17.66
+      78.66
+   ],
+   [
+      "5.21.6",
+      79.32
+   ],
+   [
+      "5.21.7",
+      74.57
+   ],
+   [
+      "5.21.8",
+      74.54
    ],
    [
       "5.22.0",
-      18.64,
-      17.88
+      73.88
    ],
    [
       "5.23.0",
-      19.07,
-      18.26
+      74.91
    ],
    [
       "5.23.1",
-      18.43,
-      17.88
+      75.35
    ]
 ]
 );
         var options = {
-            title: 'Perl::Formance - Mem.copy - memory stress',
+            title: 'Perl::Formance - Threads - thread handling',
             hAxis: {title: 'perlconfig_version',  titleTextStyle: {color: '#333'}, slantedTextAngle: 45},
             vAxis: {minValue: 0, title:'seconds (smaller is better)'},
             pointSize: 4,
