more numbers per point, some gaps filled

--- a/results/dpath.html
+++ b/results/dpath.html
@@ -332,7 +332,7 @@
 ]
 );
         var options = {
-            title: 'Perl::Formance - accessors - $obj->foo() / $obj->foo(42)',
+            title: 'Perl::Formance - dpath - traversing data structures',
             hAxis: {title: 'perlconfig_version',  titleTextStyle: {color: '#333'}, slantedTextAngle: 45},
             vAxis: {minValue: 0, title:'seconds (smaller is better)'},
             pointSize: 4,
