--- a/results/shootout.html
+++ b/results/shootout.html
@@ -13,584 +13,1255 @@
       "perlconfig_version",
       "binarytrees/threads",
       "binarytrees/nothreads",
+      "fannkuch/threads",
       "fasta/threads",
       "fasta/nothreads",
       "nbody/threads",
       "nbody/nothreads",
       "spectralnorm/threads",
-      "spectralnorm/nothreads"
+      "spectralnorm/nothreads",
+      "fannkuch/threads",
+      "knucleotide/threads",
+      "mandelbrot/threads",
+      "pidigits/threads",
+      "pidigits/nothreads",
+      "regexdna/threads",
+      "regexdna/nothreads"
+   ],
+   [
+      "5.10.0",
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      80.31,
+      null,
+      10.42,
+      null
    ],
    [
       "5.10.1",
       104.41,
       97.2,
+      17.19,
       280.62,
       249.25,
       31.88,
       31.06,
       26.06,
-      24.7
+      24.7,
+      17.19,
+      null,
+      19.82,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.12.0",
+      null,
+      null,
+      17.45,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      17.45,
+      41.66,
+      19.97,
+      77.88,
+      75.8,
+      11.17,
+      11.03
    ],
    [
       "5.13.0",
       103.26,
       97.15,
+      17.05,
       294.89,
       262.19,
       32.43,
       30.5,
       25.48,
-      23.71
+      23.71,
+      17.05,
+      null,
+      19.38,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.1",
       100.92,
       98.05,
+      16.97,
       296.49,
       260.85,
       32.58,
       31.16,
       26.56,
-      23.83
+      23.83,
+      16.97,
+      null,
+      19.68,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.2",
       101.75,
       96.1,
+      16.58,
       284.81,
       254.26,
       30.47,
       28.82,
       24.99,
-      23.71
+      23.71,
+      16.58,
+      null,
+      17.63,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.3",
       100.62,
       97.45,
+      17.13,
       282.71,
       254.66,
       31.85,
       29.29,
       25.08,
-      23.72
+      23.72,
+      17.13,
+      null,
+      19.5,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.4",
       102.81,
       96.78,
+      16.67,
       274.11,
       249.96,
       32.21,
       28.51,
       25.15,
-      23.3
+      23.3,
+      16.67,
+      null,
+      19.83,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.5",
       103.02,
       97.4,
+      16.91,
       276.67,
       253.5,
       30.78,
       28.77,
       24.7,
-      24.03
+      24.03,
+      16.91,
+      null,
+      19.33,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.6",
       102.32,
       99.11,
+      17.62,
       279.06,
       264.64,
       30.37,
       28.41,
       27.22,
-      25.13
+      25.13,
+      17.62,
+      null,
+      17.42,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.7",
       100.16,
       97.75,
+      17.07,
       286.66,
       269.99,
       30.08,
       28.9,
       26.49,
-      26.08
+      26.08,
+      17.07,
+      null,
+      17.53,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.8",
       100.46,
       97.41,
+      18.08,
       279.6,
       269.34,
       30.33,
       27.74,
       27.31,
-      25.4
+      25.4,
+      18.08,
+      null,
+      18.25,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.9",
       100.68,
       97.1,
+      17.36,
       301.32,
       277.81,
       30.81,
       28.49,
       27.47,
-      26.4
+      26.4,
+      17.36,
+      null,
+      18.58,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.13.10",
       102.36,
       98.66,
+      17.5,
       305.95,
       275.16,
       29.65,
       28.55,
       26.74,
-      26.24
+      26.24,
+      17.5,
+      null,
+      17.83,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.14.0",
+      null,
+      null,
+      17.59,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      17.59,
+      36.41,
+      18.04,
+      76.25,
+      76.33,
+      10.77,
+      11.18
+   ],
+   [
+      "5.14.4",
+      null,
+      null,
+      17.86,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      17.86,
+      37.4,
+      18.55,
+      76.85,
+      75.89,
+      10.77,
+      10.22
    ],
    [
       "5.15.1",
       99.73,
       99.8,
+      17.44,
       260.6,
       252.19,
       30.7,
       28.82,
       27.54,
-      25.8
+      25.8,
+      17.44,
+      null,
+      17.74,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.2",
       99.57,
       94.96,
+      17.29,
       268.68,
       245.61,
       30.4,
       28.09,
       27.6,
-      26.04
+      26.04,
+      17.29,
+      null,
+      18.08,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.3",
       101.83,
       96.4,
+      17.46,
       268.58,
       248.9,
       29.89,
       28.98,
       27.69,
-      25.99
+      25.99,
+      17.46,
+      null,
+      18.51,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.4",
       103.16,
       95.18,
+      17.54,
       263.14,
       250.36,
       29.85,
       28.48,
       28.88,
-      27.28
+      27.28,
+      17.54,
+      null,
+      18.01,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.5",
       101.04,
       95.69,
+      17.06,
       260.19,
       254.63,
       29.65,
       28.44,
       28.48,
-      26.28
+      26.28,
+      17.06,
+      null,
+      18.04,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.6",
       102.39,
       96.97,
+      17.67,
       266.49,
       258.17,
       30.22,
       28.78,
       27.55,
-      26.53
+      26.53,
+      17.67,
+      null,
+      17.88,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.7",
       102.83,
       100.24,
+      17.94,
       276.67,
       250.16,
       30.45,
       28.48,
       27.61,
-      26.45
+      26.45,
+      17.94,
+      null,
+      18.38,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.8",
       102.76,
       96.93,
+      18.35,
       266.51,
       256.39,
       29.67,
       29.29,
       27.61,
-      26.8
+      26.8,
+      18.35,
+      null,
+      17.83,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.15.9",
       103.8,
       98.58,
+      18.11,
       262.14,
       262.11,
       29.1,
       28.35,
       27.83,
-      27.63
+      27.63,
+      18.11,
+      null,
+      17.32,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.16.0",
+      null,
+      null,
+      18.23,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      18.23,
+      40.19,
+      18.95,
+      76.93,
+      75.91,
+      10.72,
+      11.47
+   ],
+   [
+      "5.16.3",
+      null,
+      null,
+      18.89,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      18.89,
+      40.93,
+      17.51,
+      76.59,
+      76.04,
+      11.16,
+      10.38
    ],
    [
       "5.17.0",
       100.66,
       96.93,
+      18.12,
       277.65,
       258.71,
       30.79,
       28.51,
       27.17,
-      27.48
+      27.48,
+      18.12,
+      null,
+      18.73,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.1",
       103.97,
       94.9,
+      18.26,
       268.98,
       271.33,
       30.53,
       29.98,
       27.74,
-      29.32
+      29.32,
+      18.26,
+      null,
+      18.32,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.2",
       102.26,
       96.62,
+      18.29,
       264.22,
       252.97,
       30.86,
       28.94,
       27.56,
-      27.04
+      27.04,
+      18.29,
+      null,
+      19.29,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.3",
       103.13,
       96.96,
+      17.5,
       258.84,
       255.32,
       30.28,
       29.86,
       27.2,
-      28.34
+      28.34,
+      17.5,
+      null,
+      18.49,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.4",
       103.22,
       96.21,
+      18.44,
       249.74,
       245.2,
       28.53,
       27.89,
       27.52,
-      27.4
+      27.4,
+      18.44,
+      null,
+      18.15,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.5",
       103.43,
       96.53,
+      18.1,
       255.28,
       258.04,
       29.79,
       28.39,
       28.23,
-      26.32
+      26.32,
+      18.1,
+      null,
+      18.61,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.6",
       100.57,
       93.92,
+      17.65,
       253.39,
       239.91,
       30.83,
       28.27,
       27.79,
-      27.08
+      27.08,
+      17.65,
+      null,
+      18.28,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.7",
       101.82,
       95.92,
+      18.33,
       258.22,
       261.79,
       29.78,
       29.18,
       27.35,
-      27.7
+      27.7,
+      18.33,
+      null,
+      18.48,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.8",
       103.31,
       96.54,
+      17.67,
       256.25,
       282.23,
       30,
       28.21,
       27.59,
-      29.01
+      29.01,
+      17.67,
+      null,
+      18.56,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.17.9",
       101.54,
       95.11,
+      19.22,
       257.82,
       235.82,
       30.54,
       29.28,
       27.33,
-      27.04
+      27.04,
+      19.22,
+      null,
+      18.36,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.18.0",
+      null,
+      null,
+      18.27,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      18.27,
+      40.86,
+      18.15,
+      78.81,
+      77.91,
+      10.83,
+      10.92
+   ],
+   [
+      "5.18.4",
+      null,
+      null,
+      18.2,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      18.2,
+      40.07,
+      17.97,
+      78.79,
+      77.67,
+      10.39,
+      11.4
    ],
    [
       "5.19.0",
       102.94,
       96.38,
+      18.08,
       258.44,
       257.7,
       30.28,
       28.59,
       27.88,
-      27.87
+      27.87,
+      18.08,
+      null,
+      17.83,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.1",
       99.73,
       95.43,
+      17.47,
       253.32,
       254.3,
       29.61,
       30.12,
       28.94,
-      26.46
+      26.46,
+      17.47,
+      null,
+      17.65,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.2",
       102.1,
       94.81,
+      17.6,
       255.07,
       247.39,
       30.22,
       28.36,
       28.23,
-      26.59
+      26.59,
+      17.6,
+      null,
+      18.28,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.3",
       100.64,
       96.84,
+      18,
       249.99,
       245.42,
       30.24,
       28.45,
       29.38,
-      27.85
+      27.85,
+      18,
+      null,
+      18.06,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.4",
       107.15,
       94.18,
+      17.87,
       263.19,
       243.2,
       30.14,
       27.9,
       27.35,
-      28.26
+      28.26,
+      17.87,
+      null,
+      18.32,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.5",
       100.18,
       93.38,
+      18.17,
       254.56,
       238.8,
       30.28,
       28.12,
       27.85,
-      27.29
+      27.29,
+      18.17,
+      null,
+      17.25,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.6",
       103.11,
       94.88,
+      18.91,
       261.5,
       238.53,
       30.48,
       28.01,
       27.96,
-      27.33
+      27.33,
+      18.91,
+      null,
+      17.79,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.7",
       101.98,
       98.34,
+      18.64,
       257,
       242.88,
       30.04,
       29.47,
       27.92,
-      29.11
+      29.11,
+      18.64,
+      null,
+      18.31,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.8",
       100.02,
       95.63,
+      18.12,
       261.62,
       251.66,
       29.63,
       28.23,
       28.35,
-      28.07
+      28.07,
+      18.12,
+      null,
+      18.2,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.9",
       100.37,
       94.05,
+      17.23,
       253.61,
       232.65,
       29.5,
       28.93,
       27.66,
-      26.38
+      26.38,
+      17.23,
+      null,
+      18.66,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.10",
       98.06,
       93.8,
+      17.92,
       255.55,
       241.94,
       29.49,
       28.79,
       27.41,
-      25.96
+      25.96,
+      17.92,
+      null,
+      18.9,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.19.11",
       99.75,
       92.42,
+      18.17,
       262.81,
       248.13,
       29.9,
       28.14,
       27.02,
-      26.26
+      26.26,
+      18.17,
+      null,
+      18.53,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.20.0",
+      null,
+      null,
+      18.06,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      18.06,
+      38.22,
+      19.59,
+      78.61,
+      77.43,
+      9.93,
+      9.26
+   ],
+   [
+      "5.20.2",
+      null,
+      null,
+      17.88,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      17.88,
+      38.18,
+      18.07,
+      78.93,
+      77.93,
+      10.59,
+      9.23
    ],
    [
       "5.21.0",
       102.23,
       93.26,
+      18,
       249.97,
       236.92,
       30.74,
       28.02,
       27.52,
-      26.72
+      26.72,
+      18,
+      null,
+      20.04,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.21.1",
       99.17,
       93.74,
+      18.03,
       258.4,
       250.91,
       30.79,
       27.36,
       28.85,
-      26.52
+      26.52,
+      18.03,
+      null,
+      18.73,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.21.2",
       99.83,
       93.01,
+      17.96,
       248.71,
       245.59,
       30.31,
       27.7,
       27.4,
-      27.16
+      27.16,
+      17.96,
+      null,
+      18.79,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.21.3",
       99.9,
       96.16,
+      17.84,
       254.98,
       251.86,
       30.27,
       28.11,
       28.23,
-      27.74
+      27.74,
+      17.84,
+      null,
+      18.63,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.21.4",
       99.82,
       94.55,
+      17.73,
       251.37,
       244.48,
       29.77,
       28.55,
       28.47,
-      27.25
+      27.25,
+      17.73,
+      null,
+      18.39,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.21.5",
       97.04,
       97.19,
+      16.99,
       256.84,
       274.3,
       34.32,
       32.47,
       28.89,
-      28.18
+      28.18,
+      16.99,
+      null,
+      20.97,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.21.6",
+      null,
+      null,
+      17.43,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      17.43,
+      null,
+      18.33,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.21.7",
+      null,
+      null,
+      16.09,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      16.09,
+      null,
+      18.78,
+      null,
+      null,
+      null,
+      null
+   ],
+   [
+      "5.21.8",
+      null,
+      null,
+      16.08,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      16.08,
+      null,
+      18.28,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.22.0",
       91.58,
       86.86,
+      15.91,
       239.69,
       234.14,
       26.83,
       25.36,
       27.36,
-      26.1
+      26.1,
+      15.91,
+      null,
+      18.56,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.23.0",
       91.33,
       87.77,
+      15.7,
       236.28,
       235.19,
       26.2,
       25.29,
       27,
-      25.6
+      25.6,
+      15.7,
+      null,
+      18.96,
+      null,
+      null,
+      null,
+      null
    ],
    [
       "5.23.1",
       89.36,
       87.38,
+      15.58,
       242.3,
       249.93,
       27.01,
       25.44,
       26.65,
-      27.09
+      27.09,
+      15.58,
+      null,
+      18.57,
+      null,
+      null,
+      null,
+      null
    ]
 ]
 );
