--- a/results/shootout-mandelbrot.html
+++ b/results/shootout-mandelbrot.html
@@ -11,328 +11,268 @@
         var data = google.visualization.arrayToDataTable([
    [
       "perlconfig_version",
-      "mem.copy/threads",
-      "mem.copy/nothreads"
-   ],
-   [
-      "5.8.9",
-      12.16,
-      11.64
-   ],
-   [
-      "5.10.0",
-      16.8,
-      null
+      "mandelbrot/threads"
    ],
    [
       "5.10.1",
-      16.85,
-      16.53
+      19.82
    ],
    [
       "5.12.0",
-      18.28,
-      17.21
+      19.97
    ],
    [
       "5.13.0",
-      17.96,
-      17.09
+      19.38
    ],
    [
       "5.13.1",
-      18.24,
-      17.48
+      19.68
    ],
    [
       "5.13.2",
-      18.2,
-      18.41
+      17.63
    ],
    [
       "5.13.3",
-      17.84,
-      17.39
+      19.5
    ],
    [
       "5.13.4",
-      17.83,
-      17.04
+      19.83
    ],
    [
       "5.13.5",
-      18.31,
-      17.69
+      19.33
    ],
    [
       "5.13.6",
-      18.6,
-      19.11
+      17.42
    ],
    [
       "5.13.7",
-      19.16,
-      18.97
-   ],
-   [
-      "5.13.8",
-      18.66,
-      19.72
-   ],
-   [
-      "5.13.9",
-      18.21,
-      17.31
-   ],
-   [
-      "5.13.10",
-      18.54,
-      17.76
-   ],
-   [
-      "5.14.0",
-      18.02,
-      17.32
-   ],
-   [
-      "5.14.4",
-      18.66,
-      18.08
-   ],
-   [
-      "5.15.1",
-      18.55,
-      18.46
-   ],
-   [
-      "5.15.2",
-      20.56,
-      18.89
-   ],
-   [
-      "5.15.3",
-      18.16,
-      17.94
-   ],
-   [
-      "5.15.4",
-      20.02,
-      19.25
-   ],
-   [
-      "5.15.5",
-      17.94,
-      19.21
-   ],
-   [
-      "5.15.6",
-      18.66,
-      17.86
-   ],
-   [
-      "5.15.7",
-      18.69,
-      18.22
-   ],
-   [
-      "5.15.8",
-      18.35,
-      17.86
-   ],
-   [
-      "5.15.9",
-      17.51,
-      17.6
-   ],
-   [
-      "5.16.0",
-      17.23,
-      16.52
-   ],
-   [
-      "5.16.3",
-      17.91,
-      18.02
-   ],
-   [
-      "5.17.0",
-      17.75,
-      17.19
-   ],
-   [
-      "5.17.1",
-      18.04,
-      17.73
-   ],
-   [
-      "5.17.2",
-      17.41,
-      17.77
-   ],
-   [
-      "5.17.3",
-      17.88,
-      17.37
-   ],
-   [
-      "5.17.4",
-      17.62,
-      16.86
-   ],
-   [
-      "5.17.5",
-      18.35,
-      17.71
-   ],
-   [
-      "5.17.6",
-      18.76,
-      17.55
-   ],
-   [
-      "5.17.7",
-      19.24,
-      17.72
-   ],
-   [
-      "5.17.8",
-      19.36,
-      17.54
-   ],
-   [
-      "5.17.9",
-      18.59,
-      17.55
-   ],
-   [
-      "5.18.0",
-      17.97,
-      16.98
-   ],
-   [
-      "5.18.4",
-      17.77,
-      17.01
-   ],
-   [
-      "5.19.0",
-      18.34,
-      17.98
-   ],
-   [
-      "5.19.1",
-      18.76,
-      17.93
-   ],
-   [
-      "5.19.2",
-      18.47,
-      18.14
-   ],
-   [
-      "5.19.3",
-      19.36,
-      17.92
-   ],
-   [
-      "5.19.4",
-      19.37,
-      17.47
-   ],
-   [
-      "5.19.5",
-      19.01,
-      18.39
-   ],
-   [
-      "5.19.6",
-      31.81,
       17.53
    ],
    [
-      "5.19.7",
-      23.84,
+      "5.13.8",
+      18.25
+   ],
+   [
+      "5.13.9",
+      18.58
+   ],
+   [
+      "5.13.10",
+      17.83
+   ],
+   [
+      "5.14.0",
       18.04
    ],
    [
-      "5.19.8",
-      19.33,
-      17.76
+      "5.14.4",
+      18.55
    ],
    [
-      "5.19.9",
-      18.81,
-      17.35
+      "5.15.1",
+      17.74
    ],
    [
-      "5.19.10",
-      18.93,
-      17.59
+      "5.15.2",
+      18.08
    ],
    [
-      "5.19.11",
-      18.98,
+      "5.15.3",
+      18.51
+   ],
+   [
+      "5.15.4",
+      18.01
+   ],
+   [
+      "5.15.5",
+      18.04
+   ],
+   [
+      "5.15.6",
+      17.88
+   ],
+   [
+      "5.15.7",
       18.38
    ],
    [
-      "5.20.0",
-      18.46,
-      16.85
+      "5.15.8",
+      17.83
    ],
    [
-      "5.20.2",
-      18.45,
-      16.79
-   ],
-   [
-      "5.21.0",
-      19.33,
-      17.48
-   ],
-   [
-      "5.21.1",
-      18.86,
-      17.7
-   ],
-   [
-      "5.21.2",
-      19.08,
-      17.65
-   ],
-   [
-      "5.21.3",
-      18.58,
+      "5.15.9",
       17.32
    ],
    [
+      "5.16.0",
+      18.95
+   ],
+   [
+      "5.16.3",
+      17.51
+   ],
+   [
+      "5.17.0",
+      18.73
+   ],
+   [
+      "5.17.1",
+      18.32
+   ],
+   [
+      "5.17.2",
+      19.29
+   ],
+   [
+      "5.17.3",
+      18.49
+   ],
+   [
+      "5.17.4",
+      18.15
+   ],
+   [
+      "5.17.5",
+      18.61
+   ],
+   [
+      "5.17.6",
+      18.28
+   ],
+   [
+      "5.17.7",
+      18.48
+   ],
+   [
+      "5.17.8",
+      18.56
+   ],
+   [
+      "5.17.9",
+      18.36
+   ],
+   [
+      "5.18.0",
+      18.15
+   ],
+   [
+      "5.18.4",
+      17.97
+   ],
+   [
+      "5.19.0",
+      17.83
+   ],
+   [
+      "5.19.1",
+      17.65
+   ],
+   [
+      "5.19.2",
+      18.28
+   ],
+   [
+      "5.19.3",
+      18.06
+   ],
+   [
+      "5.19.4",
+      18.32
+   ],
+   [
+      "5.19.5",
+      17.25
+   ],
+   [
+      "5.19.6",
+      17.79
+   ],
+   [
+      "5.19.7",
+      18.31
+   ],
+   [
+      "5.19.8",
+      18.2
+   ],
+   [
+      "5.19.9",
+      18.66
+   ],
+   [
+      "5.19.10",
+      18.9
+   ],
+   [
+      "5.19.11",
+      18.53
+   ],
+   [
+      "5.20.0",
+      19.59
+   ],
+   [
+      "5.20.2",
+      18.07
+   ],
+   [
+      "5.21.0",
+      20.04
+   ],
+   [
+      "5.21.1",
+      18.73
+   ],
+   [
+      "5.21.2",
+      18.79
+   ],
+   [
+      "5.21.3",
+      18.63
+   ],
+   [
       "5.21.4",
-      19.8,
-      17.49
+      18.39
    ],
    [
       "5.21.5",
-      18.45,
-      17.66
+      20.97
+   ],
+   [
+      "5.21.6",
+      18.33
+   ],
+   [
+      "5.21.7",
+      18.78
+   ],
+   [
+      "5.21.8",
+      18.28
    ],
    [
       "5.22.0",
-      18.64,
-      17.88
+      18.56
    ],
    [
       "5.23.0",
-      19.07,
-      18.26
+      18.96
    ],
    [
       "5.23.1",
-      18.43,
-      17.88
+      18.57
    ]
 ]
 );
         var options = {
-            title: 'Perl::Formance - Mem.copy - memory stress',
+            title: 'Perl::Formance - Shootout - Language shootout benchmarks',
             hAxis: {title: 'perlconfig_version',  titleTextStyle: {color: '#333'}, slantedTextAngle: 45},
             vAxis: {minValue: 0, title:'seconds (smaller is better)'},
             pointSize: 4,
